Fix z-index on navbar to higher value and moved welcome message up by 5%

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -4,7 +4,7 @@
   align-items: center;
 
   position: fixed;
-  z-index: 5;
+  z-index: 50;
 
   height: 50px;
   width: 100%;
@@ -54,6 +54,7 @@
 
   button:hover {
     transition: all 0.4s ease 0s;
+
     color: #C7F464;
     cursor: pointer;
   }
