--- a/app/assets/stylesheets/components/welcome.scss
+++ b/app/assets/stylesheets/components/welcome.scss
@@ -33,7 +33,7 @@
   align-items: center;
 
   position: absolute;
-  top: 20%;
+  top: 15%;
   z-index: 1;
 
   width: 100%;
